Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-93592

lowenergyscanner does not find anything on Windows

XMLWordPrintable

    • WinRT
    • 13
    • bde63f65a1f7d4aabc59801b7baa60d0695ac8b8 (qt/qtconnectivity/dev)
    • Qt6_Foundation_Sprint 34

      The lowenergyscanner example does not find anything on Windows.

      When running the test in
      https://codereview.qt-project.org/c/qt/qtconnectivity/+/347342/4
      we see

      ********* Start testing of tst_qlowenergycontroller_device *********
      Config: Using QtTest library 6.2.0, Qt 6.2.0 (x86_64-little_endian-llp64 shared (dynamic) debug build; by MSVC 2019), windows 10
      QDEBUG : tst_qlowenergycontroller_device::initTestCase() qt.bluetooth.windows: BTLE  scan completed
      QDEBUG : tst_qlowenergycontroller_device::initTestCase() qt.bluetooth.windows: Worker started
      QDEBUG : tst_qlowenergycontroller_device::initTestCase() qt.bluetooth.windows: onBluetoothLEDeviceFound: No device given
      FAIL!  : tst_qlowenergycontroller_device::initTestCase() Compared values are not the same
         Actual   (testDevicesFound): 0
         Expected (1)               : 1
      C:\Users\windows\development\qtconnectivity\tests\manual\qlowenergycontroller\tst_qlowenergycontroller_device.cpp(100) : failure location
      PASS   : tst_qlowenergycontroller_device::cleanupTestCase()
      Totals: 1 passed, 1 failed, 0 skipped, 0 blacklisted, 25092ms
      

      It is very suspicious that "BTLE scan completed" appears almost immediately. At the "onBluetoothLEDeviceFound: No device given" messages might already give a hint where the problem might be.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            andreasbuhr Andreas Buhr
            andreasbuhr Andreas Buhr
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes