Fix BTLE device discovery on Windows

In 085af5ef811e293377ba92cd12dbda926db27620, this cast was
accidently omitted.

Fixes: QTBUG-93592
Change-Id: I990d64a53a5241a92d0e7e14d092c3d5b31e57f0
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>